[gd_scene load_steps=9 format=3 uid="uid://bbqtin2aa8fvc"]

[ext_resource type="Texture2D" uid="uid://dotab23r7ixvv" path="res://enemies/slime/slime_idle.png" id="1_hmymp"]
[ext_resource type="Script" uid="uid://cxegb3dfpiukf" path="res://enemies/slime/enemy_slime.gd" id="1_opsid"]
[ext_resource type="Texture2D" uid="uid://vprs2bc8rvnk" path="res://enemies/slime/slime_air.png" id="2_opsid"]
[ext_resource type="Texture2D" uid="uid://cubaweiwv6yjm" path="res://enemies/slime/slime_chomp1.png" id="3_d8ro5"]
[ext_resource type="Texture2D" uid="uid://mc7u8yo0n1wg" path="res://enemies/slime/slime_chomp2.png" id="4_a7sra"]
[ext_resource type="Texture2D" uid="uid://dv3616ist5d8s" path="res://enemies/slime/slime_jump.png" id="5_eqnqt"]
[ext_resource type="Texture2D" uid="uid://cym1dulmwbr1v" path="res://enemies/slime/slime_die.png" id="6_q6clb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mjgn1"]
radius = 15.0

[node name="EnemySlime" type="CharacterBody2D"]
script = ExtResource("1_opsid")
jump_delay_time = 1.0
jump_air_delay_time = 1.0
attack_delay = 1.0
attack_range = 20

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2(0.04, 0.04)

[node name="Idle" type="Sprite2D" parent="Sprites"]
texture = ExtResource("1_hmymp")

[node name="Air" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_opsid")

[node name="Chomp1" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("3_d8ro5")

[node name="Chomp2" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("4_a7sra")

[node name="Jump" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("5_eqnqt")

[node name="Death" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("6_q6clb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -10)
scale = Vector2(1, 0.62305605)
shape = SubResource("CircleShape2D_mjgn1")

[node name="JumpDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpAirDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackEndTimer" type="Timer" parent="."]
one_shot = true
